// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdfBQB sc-gsTEea eTilcL huREHC"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdfBQB sc-gsTEea ljFUMk huREHC"
>
  foo
</button>
`;
